New database code

--- a/booksdb/Views/_ViewImports.cshtml
+++ b/booksdb/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using booksdb
 @using booksdb.Models
+@using booksdb.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, booksdb
