--- a/booksdb/wwwroot/css/site.css
+++ b/booksdb/wwwroot/css/site.css
@@ -78,3 +78,27 @@ p
 {
     text-align: center;
 }
+
+a:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:visited {
+    color: red;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+a:active {
+    color: yellow;
+    background-color: transparent;
+    text-decoration: underline;
+}
