database code with comments

--- a/booksdb/Views/Home/Index.cshtml
+++ b/booksdb/Views/Home/Index.cshtml
@@ -41,6 +41,8 @@
             {
             <tr>
                 <th scope="row">#@x.BookId</th>
+               
+                @*add secret message to book id 5*@
                 @if (x.BookId == 5)
                 {
                     <th scope="row"><a href="#" data-toggle="tooltip" title="This is the best book :)">@x.Title</a></th>
