--- a/booksdb/Views/_ViewImports.cshtml
+++ b/booksdb/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using booksdb
 @using booksdb.Models
 @using booksdb.Models.ViewModels
+@*add tag helpers*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, booksdb
