--- a/booksdb/Views/Home/Index.cshtml
+++ b/booksdb/Views/Home/Index.cshtml
@@ -2,74 +2,49 @@
     ViewBag.Title = "My Online Book Store";
 }
 @model BookListViewModel
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <div class="text-center">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 
-        <div class="container">
-            <div class="row ">
-                <div class="col-12 col-md-8">
-                    <h1 class="dropdown-header">@ViewBag.Title</h1>
-                </div>
-                <div class="col-6 col-md-4">
-                    <p class="font-weight-normal">Learn about <a href="http://heathhartley.com/">Heath</a>.</p>
-                </div>
-            </div>
-        </div>
-    </div>
 
 
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Title</th>
-                <th scope="col">Author</th>
-                <th scope="col">Publisher</th>
-                <th scope="col">ISBN</th>
-                <th scope="col">Classification</th>
-                <th scope="col">Category</th>
-                <th scope="col">Price</th>
-                <th scope="col">Pages</th>
 
-            </tr>
-        </thead>
-        <tbody>
-            @*interate through the database and display in table*@
-            @foreach (var x in Model.Books)
-            {
-            <tr>
-                <th scope="row">#@x.BookId</th>
-               
-                @*add secret message to book id 5*@
-                @if (x.BookId == 5)
+
+
+
+        <table class="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Publisher</th>
+                    <th scope="col">ISBN</th>
+                    <th scope="col">Classification</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Pages</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @*interate through the database and display in table*@
+                @foreach (var x in Model.Books)
                 {
-                    <th scope="row"><a href="#" data-toggle="tooltip" title="This is the best book :)">@x.Title</a></th>
-                }
-                else
-                {
-                    <td>@x.Title</td>
+                    <partial name="BookSummary" model="x" />
+
                 }
 
-                
-                <td>@x.AuthorFirst @x.AuthorMiddle @x.AuthorLast</td>
-                <td>@x.Publisher</td>
-                <td>@x.ISBN</td>
-                <td>@x.Classification</td>
-                <td>@x.Category</td>
-                <td>$@x.Price</td>
-                <td>@x.PageNum</td>
 
-            </tr>
-            }
+        </table>
 
+    
 
-    </table>
-
-    <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"><a></a></div>
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+<div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-classes-selected="btn-primary"
+     page-url-category="@Model.CurrentCategory"
+     class="btn-group pull-right m-1"><a></a></div>
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
