--- a/booksdb/Views/_ViewImports.cshtml
+++ b/booksdb/Views/_ViewImports.cshtml
@@ -1,6 +1,10 @@
 ﻿@using booksdb
 @using booksdb.Models
 @using booksdb.Models.ViewModels
+@*add infrastructure*@
+
+@using booksdb.Infrastructure
+
 @*add tag helpers*@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, booksdb
