--- a/booksdb/Views/Home/Index.cshtml
+++ b/booksdb/Views/Home/Index.cshtml
@@ -40,9 +40,10 @@
 
     
 
-<div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-classes-selected="btn-primary"
+    <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-classes-selected="btn-primary"
      page-url-category="@Model.CurrentCategory"
-     class="btn-group pull-right m-1"><a></a></div>
+     class="btn-group pull-right m-1"><a></a>
+    </div>
 <script>
     $(document).ready(function () {
         $('[data-toggle="tooltip"]').tooltip();
