--- a/booksdb/Views/Shared/BookSummary.cshtml
+++ b/booksdb/Views/Shared/BookSummary.cshtml
@@ -7,11 +7,11 @@
     @*add secret message to book id 5*@
     @if (Model.BookId == 5)
     {
-        <th scope="row"><a href="#" data-toggle="tooltip" title="This is the best book :)">@Model.Title</a></th>
+    <th scope="row"><a href="#" data-toggle="tooltip" title="This is the best book :)">@Model.Title</a></th>
     }
     else
     {
-        <td>@Model.Title</td>
+    <td>@Model.Title</td>
     }
 
 
@@ -22,5 +22,34 @@
     <td>@Model.Category</td>
     <td>$@Model.Price</td>
     <td>@Model.PageNum</td>
+    <td>
+        <form id="@Model.BookId" asp-page="/purchased" method="post">
+            <input type="hidden" asp-for="BookId" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <span class="card-text p-1">
+              @*  @Model.Title*@
+                <button type="submit" class="btn-success btn-sm pull-right" style="float:right">
+
+                    Add to cart
+                </button>
+            </span>
+
+        </form>
+    </td>
 
 </tr>
+
+@*<div>
+    <form id="@Model.BookId" asp-page="/Cart" method="post">
+        <input type="hidden" asp-for="BookId"/>
+        <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+        <span class="card-text p-1">
+            @Model.Title
+            <button type="submit" class="btn-success btn-sm pull-right" style="float:right">
+                Add to cart
+            </button>
+        </span>
+
+    </form>
+
+</div>*@
